# papers-for-windows

./: .gitignore  .gitlab-ci.yml  Cargo.toml  NEWS.md  README.md  README.windows.md  auto-setup.ps1  bundle.ps1  meson.build  requirements.txt  setup.iss
.github/workflows/: build.yml
build-aux/windows/: README.md  auto-setup.ps1  bundle.ps1  papers.nsi
data/: org.gnome.Papers.metainfo.xml.in.in
docs/: context.md  windows-port.md
help/fr/: fr.po
libdocument/: meson.build  pps-annotation.h  pps-attachment.h  pps-document-factory.c  pps-document-find.h  pps-document-info.h  pps-document.c  pps-document.h  pps-file-helpers.c  pps-form-field.h  pps-init.c  pps-mapping-list.h  pps-xmp.c
libdocument/backend/comics/: comics-document.h
libdocument/backend/djvu/: djvu-document.c  djvu-document.h  djvu-text-page.c  djvu-text-page.h
libdocument/backend/pdf/: pps-poppler.c  pps-poppler.h
libdocument/backend/tiff/: tiff-document.h
libview/: meson.build  pps-annotation-layer-ink.c  pps-annotation-layer-objects.c  pps-annotation-overlay.c  pps-annotation-window.c  pps-annotation-window.h  pps-colors.c  pps-colors.h  pps-form-overlay.c  pps-jobs.c  pps-jobs.h  pps-pixbuf-cache.c  pps-pixbuf-cache.h  pps-platform-gtk.c  pps-platform-win32.c  pps-platform.h  pps-print-operation.c  pps-print-operation.h  pps-view-page.c  pps-view.c  pps-view.h
libview/context/: pps-annotations-context.c
po/: pl.po
previewer/: meson.build  pps-page-selector.h  pps-previewer-window.c  pps-previewer.c
shell/: Cargo.toml  build.rs  papers.rc
shell/resources/: pps-window.blp
shell/src/: application.rs  main.rs  meson.build
thumbnailer/: Cargo.toml  build.rs  meson.build  papers-thumbnailer.rc
thumbnailer/src/: main.rs
