[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace]
resolver = "3"

members = [
  './rust/papers-view',
  './rust/papers-view/sys',
  './rust/papers-document',
  './rust/papers-document/sys',
  './shell',
  './thumbnailer',
]

exclude = [
  './rust/gir',
]

[workspace.package]
authors = ["The GNOME Project"]
edition = "2024"
homepage = "https://apps.gnome.org/Papers/"
repository = "https://gitlab.gnome.org/GNOME/papers"
rust-version = "1.92"

[workspace.dependencies]
papers-document = { path = "rust/papers-document" }
papers-document-sys = { path = "rust/papers-document/sys" }
papers-view = { path = "rust/papers-view" }
papers-view-sys = { path = "rust/papers-view/sys" }

gtk = { package = "gtk4", version = "0.11", features = ["gnome_46"] }
gtk-sys = { package = "gtk4-sys", version = "0.11" }
gdk = { package = "gdk4", version = "0.11" }
gdk-sys = { package = "gdk4-sys", version = "0.11" }
glib = "0.22"
glib-sys = "0.22"
gobject-sys = "0.22"
gio = "0.22"
gio-sys = "0.22"
gdk-pixbuf = "0.22"
gdk-pixbuf-sys = "0.22"
pango = "0.22"
pango-sys = "0.22"
cairo-rs = "0.22"
cairo-sys-rs = "0.22"
env_logger = "0.11"
log = "0.4"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
