[package]
name = "papers"
version = "0.1.0"
license = "GPL-2.0-or-later"
build = "build.rs"


authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
with-keyring = ["dep:oo7"]
spell-check = []

[dependencies]
papers-view.workspace = true
papers-document.workspace = true
gtk.workspace = true
cairo-rs.workspace = true
env_logger.workspace = true
log.workspace = true
gettext-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
lru = "0.16"
futures = "0.3"
git-version = "0.3"
formatx = "0.2"
ink-stroke-modeler-rs = { version = "0.1" }
geo = { version = "0.30", default-features = false }
geo-types = { version = "0.7", default-features = false }
image.workspace = true
imageproc = "0.26"

[dependencies.oo7]
version = "0.6"
default-features = false
features = ["async-std", "native_crypto"]
optional = true

[dependencies.adw]
package = "libadwaita"
version = "0.9"
features = ["v1_7"]

[build-dependencies]
winres = "0.1"

