[package]
name = "papers-thumbnailer"
version = "0.1.0"
build = "build.rs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
papers-document.workspace = true
gio.workspace = true
glib.workspace = true
env_logger.workspace = true
log.workspace = true
gettext-rs.workspace = true
image.workspace = true

[build-dependencies]
winres = "0.1"

